ARROW-1800: [C++] Fix and simplify random_decimals

Author: Phillip Cloud <cpcloud@gmail.com>

Closes #1306 from cpcloud/ARROW-1800 and squashes the following commits:

d5b08ff0 [Phillip Cloud] ARROW-1800: [C++] Fix and simplify random_decimals